--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,1 +1,412 @@
-﻿@keyframes cardenter{0%{transform:rotatey(0deg)}100%{transform-style:preserve-3d;transform:rotatey(180deg);transition:.5s}}@keyframes react-logo-spin{from{transform:rotate(0deg)}to{transform:rotate(360deg)}}@media only screen and (max-width: 600px){.card{display:block}.react-logo{display:none}}body{background:linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c)}.react-logo{animation:react-logo-spin infinite 15s linear;height:50px;margin:auto;position:relative;opacity:.8}.touch{height:37px;margin:auto;margin-left:15px;position:relative;opacity:.8}.card-container{display:flex;flex-wrap:wrap}.card-container #show{animation-name:cardenter;animation-duration:.5s;border:1px solid rgba(0,0,0,0.5)}.card{position:relative;display:inline-block;float:left;width:123px;height:178px;border-radius:10px;background:#fff;-webkit-box-shadow:3px 3px 7px rgba(0,0,0,0.3);box-shadow:3px 3px 7px rgba(0,0,0,0.3)}.card .front,.card .back{backface-visibility:hidden;-webkit-backface-visibility:hidden;-moz-backface-visibility:hidden;-ms-backface-visibility:hidden;-o-backface-visibility:hidden;position:absolute;display:flex;align-content:space-around;justify-content:center}.card .front{transform:rotatey(180deg);-webkit-transform:rotatey(180deg);-moz-transform:rotatey(180deg);-ms-transform:rotatey(180deg);-o-transform:rotatey(180deg);z-index:1;height:100%;width:100%}.card .back{z-index:3;width:100%;height:100%;background-image:url("../images/card-back.png");background-size:100% 100%}.card .back:hover{cursor:pointer}.flipit{transform:rotatey(-180deg);-webkit-transform:rotatey(-180deg);-moz-transform:rotatey(-180deg);-ms-transform:rotatey(-180deg);-o-transform:rotatey(-180deg);transform-style:preserve-3d;-moz-transform-style:preserve-3d;-o-transform-style:preserve-3d;-ms-transform-style:preserve-3d;-webkit-transform-style:preserve-3d;transition:.5s;-webkit-transition:.5s;-moz-transition:.5s;-o-transition:.5s;border:1px solid rgba(0,0,0,0.5)}.page-header{margin:0;margin-bottom:10px;background-color:rgba(51,102,255,0.4);background-size:cover;padding-top:10px;height:5em;box-shadow:1px 1px 2px black}.page-header h1{margin:0;padding:0}#button-group{min-width:130px;position:fixed;display:inline-block;top:30%;left:auto;z-index:30}.score-text{text-shadow:-1px 1px 1px rgba(0,0,0,0.4);color:#e60a0a}#custom-button{border-radius:3px;border:1px solid rgba(0,0,0,0);background-color:rgba(51,102,255,0.4);padding-top:10px;padding-bottom:10px;width:100px}#custom-button:disabled{opacity:.4}#custom-button:hover{transition:.4s;-webkit-transition:.4s;-moz-transition:.4s;-o-transition:.4s;border:1px solid rgba(0,0,0,0.5)}.sidenav-button-a{background:rgba(0,0,255,0.5);border-top-right-radius:5px;border-bottom-right-radius:5px;position:fixed;z-index:1000;width:20px;height:60px;float:left;top:48.5%}@keyframes slideOut{0%{height:30px;width:30px;margin-top:inherit}75%{width:25em;height:30px;margin-top:inherit;.menu-items{visibility:visible}}100%{height:35em;width:25em;margin-top:-17em}}@keyframes slideIn{0%{height:35em;width:25em;margin-top:-17em}75%{width:25em;height:30px;margin-top:inherit}100%{height:30px;width:0px;margin-top:inherit}}@keyframes showItems{from{visibility:hidden}to{visibility:visible}}.nav-wrapper{position:fixed;height:30px;width:0px;top:50%;transition:2s ease-out;z-index:500;text-align:center}.nav-wrapper .nav-menu{border:1px solid rgba(0,0,0,0.5);border-top-right-radius:5px;border-bottom-right-radius:5px;box-shadow:1px 2px 2px;background:rgba(244,167,66,0.8);animation-name:slideOut;animation-duration:1s;animation-fill-mode:forwards}.nav-wrapper .nav-menu .menu-items{animation-name:showItems;animation-delay:.9s;animation-duration:.1s;animation-fill-mode:forwards}.nav-wrapper .nav-menu .menu-items ol{list-style-position:inside;padding:5px}.nav-wrapper .nav-menu-closed{background:rgba(244,167,66,0.8);animation-name:slideIn;animation-duration:1s;animation-fill-mode:forwards;border:1px solid rgba(0,0,0,0.5);border-top-right-radius:5px;border-bottom-right-radius:5px;box-shadow:1px 2px 2px}.nav-wrapper .menu-items{visibility:hidden}.card-wrapper{width:213px;height:268px;display:inline-block}.spread>.card{position:absolute;top:0;left:0;-webkit-transition:top 0.3s ease, left 0.3s ease;-moz-transition:top 0.3s ease, left 0.3s ease;-o-transition:top 0.3s ease, left 0.3s ease;-ms-transition:top 0.3s ease, left 0.3s ease;transition:top 0.3s ease, left 0.3s ease;transition:.5s ease}.spread{margin-top:20px;width:250px;height:250px;position:relative}.spread>.card{position:absolute;top:0;left:0;-webkit-transition:top 0.3s ease, left 0.3s ease;-moz-transition:top 0.3s ease, left 0.3s ease;-o-transition:top 0.3s ease, left 0.3s ease;-ms-transition:top 0.3s ease, left 0.3s ease;transition:.5s ease}.spread:hover :nth-child(1){-webkit-transform:rotate(-10deg);-moz-transform:rotate(-10deg);-o-transform:rotate(-10deg);-ms-transform:rotate(-10deg);transform:rotate(-10deg);transition:.5s}.spread:hover :nth-child(2){left:30px;top:0px;-webkit-transform:rotate(10deg);-moz-transform:rotate(10deg);-o-transform:rotate(10deg);-ms-transform:rotate(10deg);transform:rotate(10deg);transition:.5s}.spread:hover :nth-child(3){left:60px;top:10px;-webkit-transform:rotate(30deg);-moz-transform:rotate(30deg);-o-transform:rotate(30deg);-ms-transform:rotate(30deg);transform:rotate(30deg);transition:.5s}.spread:hover :nth-child(4){left:80px;top:20px;-webkit-transform:rotate(50deg);-moz-transform:rotate(50deg);-o-transform:rotate(50deg);-ms-transform:rotate(50deg);transform:rotate(50deg);transition:.5s}.spread:hover :nth-child(5){left:100px;top:30px;-webkit-transform:rotate(70deg);-moz-transform:rotate(70deg);-o-transform:rotate(70deg);-ms-transform:rotate(70deg);transform:rotate(70deg);transition:.5s}.spread>.card:hover{-webkit-box-shadow:1px 1px 7px rgba(0,0,0,0.4);box-shadow:1px 1px 7px rgba(0,0,0,0.4)}body{background:#00a651}.card{position:relative;float:left;margin-right:10px;width:123px;height:178px;border-radius:10px;background:#fff;-webkit-box-shadow:3px 3px 7px rgba(0,0,0,0.3);box-shadow:3px 3px 7px rgba(0,0,0,0.3)}.card p{text-align:center;font:80px/160px Georgia, Times New Roman, serif}.suitdiamonds:before,.suitdiamonds:after{content:"♦";color:#ff0000}.suithearts:before,.suithearts:after{content:"♥";color:#ff0000}.suitclubs:before,.suitclubs:after{content:"♣";color:#000}.suitspades:before,.suitspades:after{content:"♠";color:#000}div[class*='suit']:before{position:absolute;font-size:35px;left:5px;top:5px}div[class*='suit']:after{position:absolute;font-size:35px;right:5px;bottom:5px}
+@charset "UTF-8";
+@keyframes cardenter {
+  0% {
+    transform: rotatey(0deg); }
+  100% {
+    transform-style: preserve-3d;
+    transform: rotatey(180deg);
+    transition: .5s; } }
+
+@keyframes react-logo-spin {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+@media only screen and (max-width: 600px) {
+  /* line 69, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .card {
+    display: block; }
+  /* line 72, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .react-logo {
+    display: none; } }
+
+/* line 77, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+body {
+  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); }
+
+/* line 81, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.react-logo {
+  animation: react-logo-spin infinite 15s linear;
+  height: 50px;
+  margin: auto;
+  position: relative;
+  opacity: .8; }
+
+/* line 89, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.touch {
+  height: 37px;
+  margin: auto;
+  margin-left: 15px;
+  position: relative;
+  opacity: .8; }
+
+/* line 98, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.card-container {
+  display: flex;
+  flex-wrap: wrap; }
+  /* line 103, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .card-container #show {
+    transform: rotatey(-180deg);
+    -webkit-transform: rotatey(-180deg);
+    -moz-transform: rotatey(-180deg);
+    -ms-transform: rotatey(-180deg);
+    -o-transform: rotatey(-180deg);
+    transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -o-transition: 0.5s;
+    border: 1px solid rgba(0, 0, 0, 0.5); }
+
+/* line 112, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.card {
+  position: relative;
+  display: inline-block;
+  float: left;
+  width: 123px;
+  height: 178px;
+  border-radius: 10px;
+  background: #fff;
+  -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
+  /* line 136, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .card .front, .card .back {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    position: absolute;
+    display: flex;
+    align-content: space-around;
+    justify-content: center; }
+  /* line 144, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .card .front {
+    transform: rotatey(180deg);
+    -webkit-transform: rotatey(180deg);
+    -moz-transform: rotatey(180deg);
+    -ms-transform: rotatey(180deg);
+    -o-transform: rotatey(180deg);
+    z-index: 1;
+    height: 100%;
+    width: 100%; }
+  /* line 154, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .card .back {
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/card-back.png");
+    background-size: 100% 100%; }
+    /* line 161, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    .card .back:hover {
+      cursor: pointer; }
+
+/* line 167, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.flipit {
+  transform: rotatey(-180deg);
+  -webkit-transform: rotatey(-180deg);
+  -moz-transform: rotatey(-180deg);
+  -ms-transform: rotatey(-180deg);
+  -o-transform: rotatey(-180deg);
+  transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s; }
+
+/* line 177, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.page-header {
+  margin: 0;
+  margin-bottom: 10px;
+  background-color: rgba(51, 102, 255, 0.4);
+  background-size: cover;
+  padding-top: 10px;
+  height: 5em;
+  box-shadow: 1px 1px 2px black; }
+  /* line 186, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .page-header h1 {
+    margin: 0;
+    padding: 0; }
+
+/* line 192, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+#button-group {
+  min-width: 130px;
+  position: fixed;
+  display: inline-block;
+  top: 30%;
+  left: auto;
+  z-index: 30; }
+
+/* line 201, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.score-text {
+  text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
+  color: #e60a0a; }
+
+/* line 206, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+#custom-button {
+  border-radius: 3px;
+  border: 1px solid transparent;
+  background-color: rgba(51, 102, 255, 0.4);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100px; }
+  /* line 213, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  #custom-button:disabled {
+    opacity: .4; }
+  /* line 216, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  #custom-button:hover {
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    border: 1px solid rgba(0, 0, 0, 0.5); }
+
+/* SIDE NAV */
+/* line 224, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.sidenav-button-a {
+  background: rgba(0, 0, 255, 0.5);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  position: fixed;
+  z-index: 1000;
+  width: 20px;
+  height: 60px;
+  float: left;
+  top: 48.5%; }
+
+@keyframes slideOut {
+  0% {
+    height: 30px;
+    width: 30px;
+    margin-top: inherit; }
+  75% {
+    width: 25em;
+    height: 30px;
+    margin-top: inherit;
+    .menu-items {
+      visibility: visible; } }
+  100% {
+    height: 35em;
+    width: 25em;
+    margin-top: -17em; } }
+
+@keyframes slideIn {
+  0% {
+    height: 35em;
+    width: 25em;
+    margin-top: -17em; }
+  75% {
+    width: 25em;
+    height: 30px;
+    margin-top: inherit; }
+  100% {
+    height: 30px;
+    width: 0px;
+    margin-top: inherit; } }
+
+@keyframes showItems {
+  from {
+    visibility: hidden; }
+  to {
+    visibility: visible; } }
+
+/* line 284, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.nav-wrapper {
+  position: fixed;
+  height: 30px;
+  width: 0px;
+  top: 50%;
+  transition: 2s ease-out;
+  z-index: 500;
+  text-align: center; }
+  /* line 293, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .nav-wrapper .nav-menu {
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: 1px 2px 2px;
+    background: rgba(244, 167, 66, 0.8);
+    animation-name: slideOut;
+    animation-duration: 1s;
+    animation-fill-mode: forwards; }
+    /* line 299, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    .nav-wrapper .nav-menu .menu-items {
+      animation-name: showItems;
+      animation-delay: .9s;
+      animation-duration: .1s;
+      animation-fill-mode: forwards; }
+      /* line 305, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      .nav-wrapper .nav-menu .menu-items ol {
+        list-style-position: inside;
+        padding: 5px; }
+  /* line 312, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .nav-wrapper .nav-menu-closed {
+    background: rgba(244, 167, 66, 0.8);
+    animation-name: slideIn;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: 1px 2px 2px; }
+  /* line 320, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .nav-wrapper .menu-items {
+    visibility: hidden; }
+
+/* CARD IMAGES */
+/* line 327, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.card-wrapper {
+  width: 213px;
+  height: 268px;
+  display: inline-block; }
+
+/* line 334, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread > .card {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: top 0.3s ease, left 0.3s ease;
+  -moz-transition: top 0.3s ease, left 0.3s ease;
+  -o-transition: top 0.3s ease, left 0.3s ease;
+  -ms-transition: top 0.3s ease, left 0.3s ease;
+  transition: top 0.3s ease, left 0.3s ease;
+  transition: .5s ease; }
+
+/* line 346, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread {
+  margin-top: 20px;
+  width: 250px;
+  height: 250px;
+  position: relative; }
+
+/* line 353, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread > .card {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: top 0.3s ease, left 0.3s ease;
+  -moz-transition: top 0.3s ease, left 0.3s ease;
+  -o-transition: top 0.3s ease, left 0.3s ease;
+  -ms-transition: top 0.3s ease, left 0.3s ease;
+  transition: .5s ease; }
+
+/* line 367, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread:hover :nth-child(1) {
+  -webkit-transform: rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+  -o-transform: rotate(-10deg);
+  -ms-transform: rotate(-10deg);
+  transform: rotate(-10deg);
+  transition: .5s; }
+
+/* line 378, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread:hover :nth-child(2) {
+  left: 30px;
+  top: 0px;
+  -webkit-transform: rotate(10deg);
+  -moz-transform: rotate(10deg);
+  -o-transform: rotate(10deg);
+  -ms-transform: rotate(10deg);
+  transform: rotate(10deg);
+  transition: .5s; }
+
+/* line 389, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread:hover :nth-child(3) {
+  left: 60px;
+  top: 10px;
+  -webkit-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  -o-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  transform: rotate(30deg);
+  transition: .5s; }
+
+/* line 400, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread:hover :nth-child(4) {
+  left: 80px;
+  top: 20px;
+  -webkit-transform: rotate(50deg);
+  -moz-transform: rotate(50deg);
+  -o-transform: rotate(50deg);
+  -ms-transform: rotate(50deg);
+  transform: rotate(50deg);
+  transition: .5s; }
+
+/* line 411, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread:hover :nth-child(5) {
+  left: 100px;
+  top: 30px;
+  -webkit-transform: rotate(70deg);
+  -moz-transform: rotate(70deg);
+  -o-transform: rotate(70deg);
+  -ms-transform: rotate(70deg);
+  transform: rotate(70deg);
+  transition: .5s; }
+
+/* line 457, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.spread > .card:hover {
+  -webkit-box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4); }
+
+/* line 462, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+body {
+  background: #00a651; }
+
+/* line 466, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.card {
+  position: relative;
+  float: left;
+  margin-right: 10px;
+  width: 123px;
+  height: 178px;
+  border-radius: 10px;
+  background: #fff;
+  -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
+  /* line 479, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .card p {
+    text-align: center;
+    font: 80px/160px Georgia, Times New Roman, serif; }
+
+/* line 486, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.suitdiamonds:before, .suitdiamonds:after {
+  content: "♦";
+  color: #ff0000; }
+
+/* line 491, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.suithearts:before, .suithearts:after {
+  content: "♥";
+  color: #ff0000; }
+
+/* line 496, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.suitclubs:before, .suitclubs:after {
+  content: "♣";
+  color: #000; }
+
+/* line 501, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+.suitspades:before, .suitspades:after {
+  content: "♠";
+  color: #000; }
+
+/* line 506, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+div[class*='suit']:before {
+  position: absolute;
+  font-size: 35px;
+  left: 5px;
+  top: 5px; }
+
+/* line 513, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+div[class*='suit']:after {
+  position: absolute;
+  font-size: 35px;
+  right: 5px;
+  bottom: 5px; }
