--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,32 +1,32 @@
 @mixin transition($time){
-  transition: $time;
-  -webkit-transition: $time;
-  -moz-transition: $time;
-  -o-transition: $time;
+	transition: $time;
+	-webkit-transition: $time;
+	-moz-transition: $time;
+	-o-transition: $time;
 }
 
 @mixin transform-style($style){
-   transform-style: $style;
-  -moz-transform-style: $style;
-  -o-transform-style: $style;
-  -ms-transform-style: $style;
-  -webkit-transform-style: $style;
+	 transform-style: $style;
+	-moz-transform-style: $style;
+	-o-transform-style: $style;
+	-ms-transform-style: $style;
+	-webkit-transform-style: $style;
 }
 
 @mixin backface-visibility ($visibility: hidden){
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+	-o-backface-visibility: hidden;
 }
 
 @mixin transform($transformation) {
-  transform: $transformation;
-  -webkit-transform: $transformation;
-  -moz-transform: $transformation;
-  -ms-transform: $transformation;
-  -o-transform: $transformation;
+	transform: $transformation;
+	-webkit-transform: $transformation;
+	-moz-transform: $transformation;
+	-ms-transform: $transformation;
+	-o-transform: $transformation;
 }
 
 
@@ -35,10 +35,10 @@
 }
 
 @mixin clear-box {
-  border: 1px solid rgba(0, 0, 0, .5);
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  box-shadow: 1px 2px 2px;
+	border: 1px solid rgba(0, 0, 0, .5);
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	box-shadow: 1px 2px 2px;
 }
 
 // variables
@@ -49,374 +49,376 @@ $text-shadow: -1px 1px 1px rgba(0, 0, 0, .4);
 
 
 @keyframes cardenter {
-  0% {
-    transform: rotatey(0deg);
-  }
+	0% {
+		transform: rotatey(0deg);
+	}
 
-  100% {
-    transform-style: preserve-3d;
-    transform: rotatey(180deg);
-    transition: .5s;
-  }
+	100% {
+		transform-style: preserve-3d;
+		transform: rotatey(180deg);
+		transition: .5s;
+	}
 }
 
 @keyframes react-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+	from { transform: rotate(0deg); }
+	to { transform: rotate(360deg); }
 }
 
 @media only screen and (max-width: 600px){
-  .card {
-    display: block;
-  }
-  .react-logo {
-    display: none;
-  }
+	.card {
+		display: block;
+	}
+	.react-logo {
+		display: none;
+	}
 }
 
 body {
-  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
+	background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
 }
 
 .react-logo {
-  animation: react-logo-spin infinite 15s linear;
-  height: 50px;
-  margin: auto;
-  position: relative;
-  opacity: .8;
+	animation: react-logo-spin infinite 15s linear;
+	height: 50px;
+	margin: auto;
+	position: relative;
+	opacity: .8;
 
 }
 .touch {
 
-  height: 37px;
-  margin: auto;
-  margin-left: 15px;
-  position: relative;
-  opacity: .8;
+	height: 37px;
+	margin: auto;
+	margin-left: 15px;
+	position: relative;
+	opacity: .8;
 }
 
 .card-container {
-  // perspective: 300px;
+	// perspective: 300px;
 
-  display: flex;
-  flex-wrap: wrap;
-  #show {
-
-    animation-name: cardenter;
-    animation-duration: .5s;
-    border: 1px solid rgba(0, 0, 0, .5);
-
-  }
+	display: flex;
+	flex-wrap: wrap;
+	#show {
+		@include transform(rotatey(-180deg));
+		@include transform-style(preserve-3d);
+		@include transition(.5s);
+		// animation-duration: .5s;
+		border: 1px solid rgba(0, 0, 0, .5);
+	}
 }
 
 .card {
-  // -webkit-transition-duration: .5s; /* Safari */
-  // transition-duration: .5s;
-  // margin: 5px;
-  // width: 115px;
-  // min-width: 115px;
-  // height: 170px;
+	// -webkit-transition-duration: .5s; /* Safari */
+	// transition-duration: .5s;
+	// margin: 5px;
+	// width: 115px;
+	// min-width: 115px;
+	// height: 170px;
 	// border: 1px solid rgba(0, 0, 0, .0);
 	// border-radius: 5px;
-  // display: inline-block;
-  // box-shadow: 1px 1px 2px 2px rgba(0,0,0,.2);
-  // position: relative;
-  // text-align: center;
+	// display: inline-block;
+	// box-shadow: 1px 1px 2px 2px rgba(0,0,0,.2);
+	// position: relative;
+	// text-align: center;
 
-  position: relative;
-  display: inline-block;
-  float: left;
-  width: 123px;
-  height: 178px;
-  border-radius: 10px;
-  background: #fff;
-  -webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
-  box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+	position: relative;
+	display: inline-block;
+	float: left;
+	width: 123px;
+	height: 178px;
+	border-radius: 10px;
+	background: #fff;
+	-webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+	box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
 
-  .front, .back {
-    @include backface-visibility;
-    position: absolute;
-    display: flex;
-    align-content: space-around;
-    justify-content: center;
-  }
+	.front, .back {
+		@include backface-visibility;
+		position: absolute;
+		display: flex;
+		align-content: space-around;
+		justify-content: center;
+	}
 
-  .front {
-    @include transform(rotatey(180deg));
-    // animation-name: cardenter;
+	.front {
+		@include transform(rotatey(180deg));
+		// animation-name: cardenter;
 
-    z-index: 1;
-    height: 100%;
-    width: 100%;
+		z-index: 1;
+		height: 100%;
+		width: 100%;
 
-  }
+	}
 
-  .back {
+	.back {
 
-    z-index: 3;
-    width: 100%;
-    height: 100%;
-    background-image: url("../images/card-back.png");
-    background-size: 100% 100%;
-    &:hover {
-      cursor: pointer;
-    }
-  }
+		z-index: 3;
+		width: 100%;
+		height: 100%;
+		background-image: url("../images/card-back.png");
+		background-size: 100% 100%;
+		&:hover {
+			cursor: pointer;
+		}
+	}
 }
 
 .flipit {
-  @include transform(rotatey(-180deg));
-  @include transform-style(preserve-3d);
-  @include transition(.5s);
-
-  border: 1px solid rgba(0, 0, 0, .5);
+	@include transform(rotatey(-180deg));
+	@include transform-style(preserve-3d);
+	@include transition(.5s);
+	// animation-name: cardenter;
+	// animation-fill-mode: forwards;
+	// animation-duration: .5s;
+	// border: 1px solid rgba(0, 0, 0, .5);
 }
 
 .page-header {
-  margin: 0;
-  margin-bottom: 10px;
-  background-color: $main-background-color;
-  background-size: cover;
-  padding-top: 10px;
-  height: 5em;
-  box-shadow: 1px 1px 2px black;
+	margin: 0;
+	margin-bottom: 10px;
+	background-color: $main-background-color;
+	background-size: cover;
+	padding-top: 10px;
+	height: 5em;
+	box-shadow: 1px 1px 2px black;
 
-  h1 {
-    margin: 0;
-    padding: 0;
-  }
+	h1 {
+		margin: 0;
+		padding: 0;
+	}
 }
 
 #button-group {
-  min-width: 130px;
-  position: fixed;
-  display: inline-block;
-  top: 30%;
-  left: auto;
-  z-index: 30;
+	min-width: 130px;
+	position: fixed;
+	display: inline-block;
+	top: 30%;
+	left: auto;
+	z-index: 30;
 }
 
 .score-text {
-  text-shadow: $text-shadow;
-  color: $main-color;
+	text-shadow: $text-shadow;
+	color: $main-color;
 }
 
 #custom-button {
-  border-radius: 3px;
-  border: 1px solid rgba(0, 0, 0, .0);
-  background-color: $main-background-color;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100px;
-  &:disabled {
-    opacity: .4;
-  }
-  &:hover {
-    @include transition(.4s);
-    border: 1px solid rgba(0, 0, 0, .5);
-  }
+	border-radius: 3px;
+	border: 1px solid rgba(0, 0, 0, .0);
+	background-color: $main-background-color;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	width: 100px;
+	&:disabled {
+		opacity: .4;
+	}
+	&:hover {
+		@include transition(.4s);
+		border: 1px solid rgba(0, 0, 0, .5);
+	}
 }
 
 /* SIDE NAV */
 
 .sidenav-button-a {
-  background: transparentize(blue, .5);
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  position: fixed;
-  z-index: 1000;
-  width: 20px;
-  height: 60px;
-  float: left;
-  top: 48.5%;
+	background: transparentize(blue, .5);
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	position: fixed;
+	z-index: 1000;
+	width: 20px;
+	height: 60px;
+	float: left;
+	top: 48.5%;
 }
 
 @keyframes slideOut {
-  0% {
-    height: 30px;
-    width: 30px;
-    margin-top: inherit;
-  }
+	0% {
+		height: 30px;
+		width: 30px;
+		margin-top: inherit;
+	}
 
-  75% {
-    width: 25em;
-    height: 30px;
-    margin-top: inherit;
-    .menu-items {
-      visibility: visible;
-    }
-  }
+	75% {
+		width: 25em;
+		height: 30px;
+		margin-top: inherit;
+		.menu-items {
+			visibility: visible;
+		}
+	}
 
-  100% {
-    height: 35em;
-    width: 25em;
-    margin-top: -17em;
-  }
+	100% {
+		height: 35em;
+		width: 25em;
+		margin-top: -17em;
+	}
 }
 
 @keyframes slideIn {
-  0% {
-    height: 35em;
-    width: 25em;
-    margin-top: -17em;
-  }
+	0% {
+		height: 35em;
+		width: 25em;
+		margin-top: -17em;
+	}
 
-  75% {
-    width: 25em;
-    height: 30px;
-    margin-top: inherit;
-  }
+	75% {
+		width: 25em;
+		height: 30px;
+		margin-top: inherit;
+	}
 
-  100% {
-    height: 30px;
-    width: 0px;
-    margin-top: inherit;
-  }
+	100% {
+		height: 30px;
+		width: 0px;
+		margin-top: inherit;
+	}
 }
 
 @keyframes showItems {
-  from { visibility: hidden; }
-  to { visibility: visible; }
+	from { visibility: hidden; }
+	to { visibility: visible; }
 }
 
 .nav-wrapper {
-  position: fixed;
-  height: 30px;
-  width: 0px;
-  top: 50%;
-  transition: 2s ease-out;
-  z-index: 500;
-  text-align: center;
+	position: fixed;
+	height: 30px;
+	width: 0px;
+	top: 50%;
+	transition: 2s ease-out;
+	z-index: 500;
+	text-align: center;
 
-  .nav-menu {
-    @include clear-box;
-    background: rgba(244, 167, 66, .8);
-    animation-name: slideOut;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    .menu-items {
-      animation-name: showItems;
-      animation-delay: .9s;
-      animation-duration: .1s;
-      animation-fill-mode: forwards;
+	.nav-menu {
+		@include clear-box;
+		background: rgba(244, 167, 66, .8);
+		animation-name: slideOut;
+		animation-duration: 1s;
+		animation-fill-mode: forwards;
+		.menu-items {
+			animation-name: showItems;
+			animation-delay: .9s;
+			animation-duration: .1s;
+			animation-fill-mode: forwards;
 
-      ol {
-        list-style-position: inside;
-        padding: 5px;
-      }
-    }
-  }
+			ol {
+				list-style-position: inside;
+				padding: 5px;
+			}
+		}
+	}
 
-  .nav-menu-closed {
-    background: rgba(244, 167, 66, .8);
-    animation-name: slideIn;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    @include clear-box;
-  }
+	.nav-menu-closed {
+		background: rgba(244, 167, 66, .8);
+		animation-name: slideIn;
+		animation-duration: 1s;
+		animation-fill-mode: forwards;
+		@include clear-box;
+	}
 
-  .menu-items {
-    visibility: hidden;
-  }
+	.menu-items {
+		visibility: hidden;
+	}
 }
 
 /* CARD IMAGES */
 
 .card-wrapper {
-  width: 213px;
-  height: 268px;
-  display: inline-block;
+	width: 213px;
+	height: 268px;
+	display: inline-block;
 }
 
 
 .spread > .card {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transition: top 0.3s ease, left 0.3s ease;
-  -moz-transition: top 0.3s ease, left 0.3s ease;
-  -o-transition: top 0.3s ease, left 0.3s ease;
-  -ms-transition: top 0.3s ease, left 0.3s ease;
-  transition: top 0.3s ease, left 0.3s ease;
-  transition: .5s ease;
+	position: absolute;
+	top: 0;
+	left: 0;
+	-webkit-transition: top 0.3s ease, left 0.3s ease;
+	-moz-transition: top 0.3s ease, left 0.3s ease;
+	-o-transition: top 0.3s ease, left 0.3s ease;
+	-ms-transition: top 0.3s ease, left 0.3s ease;
+	transition: top 0.3s ease, left 0.3s ease;
+	transition: .5s ease;
 }
 
 .spread {
-  margin-top: 20px;
-  width: 250px;
-  height: 250px;
-  position: relative;
+	margin-top: 20px;
+	width: 250px;
+	height: 250px;
+	position: relative;
 }
 
 .spread > .card {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transition: top 0.3s ease, left 0.3s ease;
-  -moz-transition: top 0.3s ease, left 0.3s ease;
-  -o-transition: top 0.3s ease, left 0.3s ease;
-  -ms-transition: top 0.3s ease, left 0.3s ease;
-  // transition: top 0.3s ease, left 0.3s ease;
-  transition: .5s ease;
+	position: absolute;
+	top: 0;
+	left: 0;
+	-webkit-transition: top 0.3s ease, left 0.3s ease;
+	-moz-transition: top 0.3s ease, left 0.3s ease;
+	-o-transition: top 0.3s ease, left 0.3s ease;
+	-ms-transition: top 0.3s ease, left 0.3s ease;
+	// transition: top 0.3s ease, left 0.3s ease;
+	transition: .5s ease;
 }
 
 .spread {
-  &:hover {
-    :nth-child(1) {
-      -webkit-transform: rotate(-10deg);
-      -moz-transform: rotate(-10deg);
-      -o-transform: rotate(-10deg);
-      -ms-transform: rotate(-10deg);
-      transform: rotate(-10deg);
-      transition: .5s;
-    }
+	&:hover {
+		:nth-child(1) {
+			-webkit-transform: rotate(-10deg);
+			-moz-transform: rotate(-10deg);
+			-o-transform: rotate(-10deg);
+			-ms-transform: rotate(-10deg);
+			transform: rotate(-10deg);
+			transition: .5s;
+		}
 
-    // @if(.spread.)
+		// @if(.spread.)
 
-    :nth-child(2) {
-      left: 30px;
-      top: 0px;
-      -webkit-transform: rotate(10deg);
-      -moz-transform: rotate(10deg);
-      -o-transform: rotate(10deg);
-      -ms-transform: rotate(10deg);
-      transform: rotate(10deg);
-      transition: .5s;
-    }
+		:nth-child(2) {
+			left: 30px;
+			top: 0px;
+			-webkit-transform: rotate(10deg);
+			-moz-transform: rotate(10deg);
+			-o-transform: rotate(10deg);
+			-ms-transform: rotate(10deg);
+			transform: rotate(10deg);
+			transition: .5s;
+		}
 
-    :nth-child(3) {
-      left: 60px;
-      top: 10px;
-      -webkit-transform: rotate(30deg);
-      -moz-transform: rotate(30deg);
-      -o-transform: rotate(30deg);
-      -ms-transform: rotate(30deg);
-      transform: rotate(30deg);
-      transition: .5s;
-    }
+		:nth-child(3) {
+			left: 60px;
+			top: 10px;
+			-webkit-transform: rotate(30deg);
+			-moz-transform: rotate(30deg);
+			-o-transform: rotate(30deg);
+			-ms-transform: rotate(30deg);
+			transform: rotate(30deg);
+			transition: .5s;
+		}
 
-    :nth-child(4) {
-      left: 80px;
-      top: 20px;
-      -webkit-transform: rotate(50deg);
-      -moz-transform: rotate(50deg);
-      -o-transform: rotate(50deg);
-      -ms-transform: rotate(50deg);
-      transform: rotate(50deg);
-      transition: .5s;
-    }
+		:nth-child(4) {
+			left: 80px;
+			top: 20px;
+			-webkit-transform: rotate(50deg);
+			-moz-transform: rotate(50deg);
+			-o-transform: rotate(50deg);
+			-ms-transform: rotate(50deg);
+			transform: rotate(50deg);
+			transition: .5s;
+		}
 
-    :nth-child(5) {
-      left: 100px;
-      top: 30px;
-      -webkit-transform: rotate(70deg);
-      -moz-transform: rotate(70deg);
-      -o-transform: rotate(70deg);
-      -ms-transform: rotate(70deg);
-      transform: rotate(70deg);
-      transition: .5s;
-    }
-  }
+		:nth-child(5) {
+			left: 100px;
+			top: 30px;
+			-webkit-transform: rotate(70deg);
+			-moz-transform: rotate(70deg);
+			-o-transform: rotate(70deg);
+			-ms-transform: rotate(70deg);
+			transform: rotate(70deg);
+			transition: .5s;
+		}
+	}
 }
 
 // .spread:hover .suithearts {
@@ -453,66 +455,66 @@ body {
 // }
 
 .spread > .card:hover {
-  -webkit-box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
-  box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
+	-webkit-box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
+	box-shadow: 1px 1px 7px rgba(0,0,0,0.4);
 }
 
 body {
-  background: #00a651;
+	background: #00a651;
 }
 
 .card {
 
-  position: relative;
-  float: left;
-  margin-right: 10px;
-  width: 123px;
-  height: 178px;
-  border-radius: 10px;
-  background: #fff;
-  -webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
-  box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+	position: relative;
+	float: left;
+	margin-right: 10px;
+	width: 123px;
+	height: 178px;
+	border-radius: 10px;
+	background: #fff;
+	-webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+	box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
 
 
-  p {
-    text-align: center;
-    font: 80px/160px Georgia, Times New Roman, serif;
-  }
+	p {
+		text-align: center;
+		font: 80px/160px Georgia, Times New Roman, serif;
+	}
 
 }
 
 .suitdiamonds:before, .suitdiamonds:after {
-  content: "♦";
-  color: #ff0000;
+	content: "♦";
+	color: #ff0000;
 }
 
 .suithearts:before, .suithearts:after {
-  content: "♥";
-  color: #ff0000;
+	content: "♥";
+	color: #ff0000;
 }
 
 .suitclubs:before, .suitclubs:after {
-  content: "♣";
-  color: #000;
+	content: "♣";
+	color: #000;
 }
 
 .suitspades:before, .suitspades:after {
-  content: "♠";
-  color: #000;
+	content: "♠";
+	color: #000;
 }
 
 div[class*='suit']:before {
-  position: absolute;
-  font-size: 35px;
-  left: 5px;
-  top: 5px;
+	position: absolute;
+	font-size: 35px;
+	left: 5px;
+	top: 5px;
 }
 
 div[class*='suit']:after {
-  position: absolute;
-  font-size: 35px;
-  right: 5px;
-  bottom: 5px;
+	position: absolute;
+	font-size: 35px;
+	right: 5px;
+	bottom: 5px;
 }
 
 // .card-1 {
